https://cellstop.atlassian.net/browse/VD-342